geofence functions and tests

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,14 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  danger-color:#ff4444,
+  warning-color:#ffbb33,
+  success-color:#00c851,
+  info-color: #33b5e5,
+  default-color:#2BBBAD,//Estos 3 siguientes cambiar en funcion de los colores de la app
+  primary-color: #4285F4,
+  secondary-color: #aa66cc
 );
 
 
