--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,15 @@
 <ion-menu [content]="content">
   <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
+    <ion-toolbar color="primary-color">
+      <ion-title>Nombre evento</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-content>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
+        <ion-icon name={{p.icon}} item-start color="primary-color"></ion-icon>
+        <ion-label>{{p.title}}</ion-label>
       </button>
     </ion-list>
   </ion-content>
