--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,7 +22,7 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
-$menu-width: 250px; //Ancho del menú lateral
+$menu-width: 304px; //Ancho del menú lateral (304 es el que viene por defecto)
 
 // Named Color Variables
 // --------------------------------------------------
