--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,14 @@
 <ion-menu [content]="content">
   <ion-header>
     <ion-toolbar color="primary-color">
-      <ion-title>Nombre evento</ion-title>
+        <ion-item color="primary-color" no-lines>
+          <ion-thumbnail item-start >
+            <img src="assets/imgs/accuracy_logo.png"/>
+          </ion-thumbnail>
+          <h1>Nombre evento</h1>
+        </ion-item>
     </ion-toolbar>
   </ion-header>
-
   <ion-content>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
