added firebase and some new pages

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,4 @@
 // http://ionicframework.com/docs/theming/
-
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -14,3 +12,21 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+//Configuración global de los toasts (popups)
+// toast verde(success)
+ion-toast.success .toast-wrapper {
+    background: #32DB64;
+    text-align: center;
+}
+
+//toast rojo (error)
+ion-toast.error .toast-wrapper {
+    background: #F53D3D;
+    text-align: center;
+}
+
+//toast azul (info)
+ion-toast.info .toast-wrapper {
+    background: #488aff;
+    text-align: center;
+}
