--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -37,7 +37,8 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222,
+  dark:       #000,
+  white:      #FFF,
   danger-color:#ff4444,
   warning-color:#ffbb33,
   success-color:#00c851,
