timetable page demo done

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,6 +23,8 @@ $app-direction: ltr;
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
 $menu-width: 304px; //Ancho del menú lateral (304 es el que viene por defecto)
+ $segment-button-md-font-size: 1.5rem; //Tamaño del texto de los segmentos (pestañas dentro de una pagina)
+ $segment-button-ios-font-size: 1.5rem;
 
 // Named Color Variables
 // --------------------------------------------------
